# migrations-numbering

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.txt  README.md  pyproject.toml
migrations_numbering/: __init__.py
tests/: test_migrations_numbering.py
