[tool.poetry]
name = "migrations-numbering"
version = "0.1.0a2"
description = "A hook for pre-commit that checks for mis-numbered migration files."
authors = ["Mike Mabey <mmabey@ieee.org>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mmabey/migrations-numbering"
keywords = ["migration", "git hook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.scripts]
check_migrations_numbering = "migrations_numbering:main"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.isort]
known_third_party = ["click"]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
